--- a/public/styling/cssBasic.css
+++ b/public/styling/cssBasic.css
@@ -541,6 +541,35 @@
   }
 }
 
+.wall1{
+  animation-name: wallAnimation1;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes wallAnimation1 {
+  0% {
+    transform: scale(.3);
+    background-color: rgb(128,128, 128);
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: rgb(128, 128, 128);
+  }
+
+  100% {
+    transform: scale(1.0);
+    background-color: rgb(128,128,128);
+  }
+}
+
+
 .instantvisitedobject{
   border: 1px solid rgb(175, 216, 248);
   background-color: rgba(178, 67, 255, 0.75);
