--- a/public/styling/cssBasic.css
+++ b/public/styling/cssBasic.css
@@ -569,6 +569,202 @@
   }
 }
 
+.wall2{
+  animation-name: wallAnimation2;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes wallAnimation2 {
+  0% {
+    transform: scale(.3);
+    background-color: rgb(255,69, 0);
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: rgb(255,69, 0);
+  }
+
+  100% {
+    transform: scale(1.0);
+    background-color: rgb(255,69, 0);
+  }
+}
+
+.wall3{
+  animation-name: wallAnimation3;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes wallAnimation3 {
+  0% {
+    transform: scale(.3);
+    background-color: rgb(161,61, 45);
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: rgb(161,61, 45);
+  }
+
+  100% {
+    transform: scale(1.0);
+    background-color: rgb(161,61, 45);
+  }
+}
+
+.wall4{
+  animation-name: wallAnimation4;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes wallAnimation4 {
+  0% {
+    transform: scale(.3);
+    background-color: rgb(90,77,65);
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: rgb(90,77,65);
+  }
+
+  100% {
+    transform: scale(1.0);
+    background-color: rgb(90,77,65);
+  }
+}
+
+.wall5{
+  animation-name: wallAnimation5;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes wallAnimation5 {
+  0% {
+    transform: scale(.3);
+    background-color: rgb(0,199,190);
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: rgb(0,199,190);
+  }
+
+  100% {
+    transform: scale(1.0);
+    background-color: rgb(0,199,190);
+  }
+}
+
+.wall6{
+  animation-name: wallAnimation6;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes wallAnimation6 {
+  0% {
+    transform: scale(.3);
+    background-color: rgb(239,221,111);
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: rgb(239,221,111);
+  }
+
+  100% {
+    transform: scale(1.0);
+    background-color: rgb(239,221,111);
+  }
+}
+.wall7{
+  animation-name: wallAnimation7;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes wallAnimation7 {
+  0% {
+    transform: scale(.3);
+    background-color: rgb(124,252,0);
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: rgb(124,252,0);
+  }
+
+  100% {
+    transform: scale(1.0);
+    background-color: rgb(124,252,0);
+  }
+}
+
+.wall8{
+  animation-name: wallAnimation8;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes wallAnimation8 {
+  0% {
+    transform: scale(.3);
+    background-color: rgb(0,0,0);
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: rgb(0,0,0);
+  }
+
+  100% {
+    transform: scale(1.0);
+    background-color: rgb(0,0,0);
+  }
+}
+
+
 
 .instantvisitedobject{
   border: 1px solid rgb(175, 216, 248);
