--- a/public/styling/cssBasic.css
+++ b/public/styling/cssBasic.css
@@ -7347,7 +7347,7 @@ footer p {
   width: 17vw;
 }
 
-#button1,#button2,#button3,#button4 {
+#button1,#button2,#button3,#button4,#button5,#button6,#button7,#button8 {
   background: #3490E7;
   margin:8px;
   box-shadow: inset 0px -3px 0px 0px #2E81CF;
